logs/dag_id=etl_22024-08-21/run_id=scheduled__2024-08-08T00:00:00+00:00/task_id=final_etl_processing/attempt=1.log
[2024-08-21T06:27:45.410+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-08-21T06:27:45.583+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl_22024-08-21.final_etl_processing scheduled__2024-08-08T00:00:00+00:00 [queued]>
[2024-08-21T06:27:45.600+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl_22024-08-21.final_etl_processing scheduled__2024-08-08T00:00:00+00:00 [queued]>
[2024-08-21T06:27:45.601+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2024-08-21T06:27:45.693+0000] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): final_etl_processing> on 2024-08-08 00:00:00+00:00
[2024-08-21T06:27:45.769+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=4538) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-08-21T06:27:45.758+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'etl_22024-08-21', 'final_etl_processing', 'scheduled__2024-08-08T00:00:00+00:00', '--job-id', '771', '--raw', '--subdir', 'DAGS_FOLDER/final_etl.py', '--cfg-path', '/tmp/tmpfbvg89j0']
[2024-08-21T06:27:45.777+0000] {standard_task_runner.py:91} INFO - Job 771: Subtask final_etl_processing
[2024-08-21T06:27:45.782+0000] {standard_task_runner.py:63} INFO - Started process 4553 to run task
[2024-08-21T06:27:45.989+0000] {task_command.py:426} INFO - Running <TaskInstance: etl_22024-08-21.final_etl_processing scheduled__2024-08-08T00:00:00+00:00 [running]> on host 7e1333882d71
[2024-08-21T06:27:46.383+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='etl_22024-08-21' AIRFLOW_CTX_TASK_ID='final_etl_processing' AIRFLOW_CTX_EXECUTION_DATE='2024-08-08T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-08-08T00:00:00+00:00'
[2024-08-21T06:27:46.387+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-08-21T06:27:46.447+0000] {subprocess.py:63} INFO - Tmp dir root location: /tmp
[2024-08-21T06:27:46.448+0000] {subprocess.py:75} INFO - Running command: ['/usr/bin/bash', '-c', "python3 /opt/***/data/etl_m12.py --connection postgresql+psycopg2://***:***@postgres/postgres --csv ''"]
[2024-08-21T06:27:46.484+0000] {subprocess.py:86} INFO - Output:
[2024-08-21T06:27:46.746+0000] {subprocess.py:93} INFO -   File "/opt/***/data/etl_m12.py", line 155
[2024-08-21T06:27:46.766+0000] {subprocess.py:93} INFO -     # main(args.csv, args.connection)
[2024-08-21T06:27:46.773+0000] {subprocess.py:93} INFO - IndentationError: expected an indented block after 'if' statement on line 147
[2024-08-21T06:27:46.777+0000] {subprocess.py:97} INFO - Command exited with return code 1
[2024-08-21T06:27:46.790+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-08-21T06:27:46.964+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/bash.py", line 243, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2024-08-21T06:27:46.994+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=etl_22024-08-21, task_id=final_etl_processing, run_id=scheduled__2024-08-08T00:00:00+00:00, execution_date=20240808T000000, start_date=20240821T062745, end_date=20240821T062746
[2024-08-21T06:27:47.044+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 771 for task final_etl_processing (Bash command failed. The command returned a non-zero exit code 1.; 4553)
[2024-08-21T06:27:47.069+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-08-21T06:27:47.207+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
